--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 </tr>
             </table>
         </section>
-        <footer>Curso de desenvolvimento de software - SENAI 1.27</footer>
+        <footer>GoDinner Produções - Rubens Victor, Marlon Santos, Marina Santana, Sarah Rodriguez e Washington Sampaio 1.27</footer>
         <script src="jogoDaVelha.js"></script>
 </body>
 
